# Thesis-codebase

./: .gitignore  requirements.txt
1dof/: sim1dof.slx
1dof/Observer/: ob.py
1dof/RFOB/: rfob.py  rfob_20260616_175045.csv  rfob_20260616_210641.csv
1dof/amittance/: adm-imp_ft.py  adm_imp_20260616_204159.csv  adm_imp_20260616_205150.csv  admittance_20260616_154103.csv  admittance_20260616_155326.csv  admittance_20260616_160217.csv  admittance_20260616_211110.csv  admittance_ft.py
1dof/force_sensor/: ft_pid+lag.py  sysid_20260609_122102.csv  sysid_20260609_122903.csv  sysid_20260609_122929.csv  sysid_20260609_123145.csv  (+7 more)
ATI_FTsensor/: README.md  __init__.py  ftsensor.py  setup.py
T-Motor-API/: README.md  pyproject.toml
T-Motor-API/config/: default.yaml
T-Motor-API/docs/api/: README.md
T-Motor-API/docs/api/motortools/: can_tools.md  config.md  data-logger.md  filters.md  group.md  iir-filter.md  limits.md  logger.md  loop.md  models_io.md  motor-group.md  realtime-loop.md  trajectory.md  units.md  virtual.md
T-Motor-API/docs/api/tmotorcan/: dataclasses.md  exceptions.md  mit-motor.md  models.md  motor-bus.md
T-Motor-API/script/: single_motor.py  single_motor_advanced.py
T-Motor-API/src/motortools/: __init__.py  can_tools.py  config.py  filters.py  group.py  limits.py  logger.py  loop.py  models_io.py  trajectory.py  units.py  virtual.py
T-Motor-API/src/tmotorcan/: __init__.py  bus.py  mit_mode.py  protocol.py
T-Motor-API/src/tmotorcan/models/: __init__.py  ak45-10.yaml  ak45-36.yaml
tools/: data_logger.py  easy_path.py  helpers.py  plot_thread.py
(+169 files in other folders)
