[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "tmotorcan"
version = "0.1.0"
description = "AK-series MIT-mode CAN motor library"
requires-python = ">=3.10"
dependencies = [
    "python-can>=4.0",
    "pyyaml>=6.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
# ── motortools extras ─────────────────────────────────────────────────────────
# motortools is co-bundled (always installed); extras are semantic markers only.
# pip install tmotorcan[mini]  → core only (MotorBus, MITMotor, protocol)
# pip install tmotorcan[full]  → core + all motortools utilities re-exported
mini    = []
full    = []
# ── UI extras ────────────────────────────────────────────────────────────────
gui = ["PySide6>=6.6", "pyqtgraph>=0.13"]
tui = ["textual[syntax]>=0.60"]
# ── dev ───────────────────────────────────────────────────────────────────────
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tmotorcan = ["models/*.yaml"]